--- a/Spring24/hw_example/H3_reference.ipynb
+++ b/Spring24/hw_example/H3_reference.ipynb
@@ -307,13 +307,18 @@
     "\n",
     "################### TBD ##################\n",
     "# 2. Report model prediction on these clean samples.\n",
-    "# 3. Add backdoor triggers to the chosen samples.\n",
-    "# 3. Report model prediction on these backdoored samples.\n",
+    "# 3. Add backdoor triggers them.\n",
+    "# 3. Report model prediction on the backdoored samples.\n",
     "# 4. Visualize two rows of images: first row being the clean samples, the second row being backdoored samples. \n",
     "\n",
     "print('GroundTruth                             : ', ' '.join(f'{classes[labels[j]]:5s}' for j in range(batch_size)))\n",
     "print('Prediction on Clean Samples             :   ')\n",
     "print('Prediction on Backdoor-Triggered Samples:   ')\n",
+    "################### TBD ##################\n",
+    "\n",
+    "################### TBD ##################\n",
+    "# 1. Randomly choose 1000 testing samples\n",
+    "# 2. Report the Attack Success Rate.\n",
     "################### TBD ##################"
    ]
   }
