update homework title

--- a/Spring25/Homework-1.ipynb
+++ b/Spring25/Homework-1.ipynb
@@ -5,7 +5,7 @@
    "id": "42a77ce8",
    "metadata": {},
    "source": [
-    "# Federated Learning with Non-IID Data"
+    "# Federated Learning 101  "
    ]
   },
   {
@@ -13,7 +13,7 @@
    "id": "f832f38d",
    "metadata": {},
    "source": [
-    "In this assignment, you will explore how federated learning handles heterogeneous data sources by working with two different datasets: **MNIST** (handwritten digits) and **SVHN** (Street View House Numbers). You'll implement (1) basic centralized models, (2) federated learning with FedAvg, and compare it with (3) local training without federated learning. Finally You will enable **personalized** nueral network layers to handle the heterogeneity between these clients. "
+    "In this assignment, you will explore how federated learning handles heterogeneous data sources by working with two different datasets: **MNIST** (handwritten digits) and **SVHN** (Street View House Numbers). You'll implement (1) basic centralized models, (2) federated learning with FedAvg, and compare it with (3) local training without federated learning. "
    ]
   },
   {
