--- a/Spring25/Homework-1.ipynb
+++ b/Spring25/Homework-1.ipynb
@@ -29,7 +29,7 @@
    "id": "aba15dde",
    "metadata": {},
    "source": [
-    "## Part1: Centralized Machine Learning"
+    "## Part I: Centralized Machine Learning"
    ]
   },
   {
@@ -259,7 +259,7 @@
    "id": "99b59e95",
    "metadata": {},
    "source": [
-    "# Assignment Instructions for Part 1\n",
+    "# Assignment Instructions for Part I\n",
     "\n",
     "1. Use the provided code to load and preprocess both datasets.\n",
     "2. Instantiate two separate models of the given architecture.\n",
@@ -464,7 +464,7 @@
    "id": "d9b1f8aa",
    "metadata": {},
    "source": [
-    "# Assignment Instructions for Part 2\n",
+    "# Assignment Instructions for Part II\n",
     "\n",
     "1. Federated Learning Setup: Implement the FedAvg algorithm to train a global model using 4 clients over 30 global epochs.\n",
     "2. Each client will have its own local training data, and a global test set for each task (MNIST and SVHN) is provided in Step 2.1.\n",
@@ -533,7 +533,7 @@
    "id": "62be8044",
    "metadata": {},
    "source": [
-    "# PART 3 Report localized training performance"
+    "# PART III Report localized training performance"
    ]
   },
   {
@@ -541,7 +541,7 @@
    "id": "23192884",
    "metadata": {},
    "source": [
-    "# Assignment Instructions for Part 3\n",
+    "# Assignment Instructions for Part III\n",
     "\n",
     "In this part, we compare the performance of Federated Learning (FedAvg) from Part 2 with localized training, where each client trains a model independently using only its own local data, without participating in federated learning.\n",
     "\n",
