--- a/Spring25/Homework-1.ipynb
+++ b/Spring25/Homework-1.ipynb
@@ -562,14 +562,6 @@
    ]
   },
   {
-   "cell_type": "code",
-   "execution_count": null,
-   "id": "471d2df0",
-   "metadata": {},
-   "outputs": [],
-   "source": []
-  },
-  {
    "cell_type": "markdown",
    "id": "1838e206",
    "metadata": {},
@@ -594,16 +586,17 @@
    "source": [
     "# What to Submit:\n",
     "1. a jupyter notebook source file \n",
-    "2. a pdf file with all your jupyter notebook results, including running results, plot figures, and analysis texts "
+    "2. a pdf file with all your jupyter notebook results, including running results, figures, and analysis texts "
    ]
   },
   {
-   "cell_type": "code",
-   "execution_count": null,
-   "id": "0a817266",
+   "cell_type": "markdown",
+   "id": "c87ae4c9",
    "metadata": {},
-   "outputs": [],
-   "source": []
+   "source": [
+    "## NOTE: \n",
+    "Please indicate whether or to what extent you have used generative AI tools (such as ChatGPT) to facilitate the completion of this assignment."
+   ]
   }
  ],
  "metadata": {
